<resources>
    <string name="_0_000000_000">0.000000.000</string>
    <string name="incorrect_format">Incorrect format</string>
    <string name="incorrect_number">Incorrect number</string>
    <string name="transform_menu_1">From the inverse to the direct</string>
    <string name="transform_menu_2">From the Adt. to the reverse</string>
    <string name="transform_menu_3">From the direct to decimal</string>
    <string name="direct">Dir.</string>
    <string name="inversion">Inv.</string>
    <string name="decimal">Dec.</string>
    <string name="additional">Adt.</string>
    <string name="remove">remove</string>
    <string name="plus_field">plus</string>
    <string name="transform">transform</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Are_you_sure_you_want_to_abort_the_test">Are you sure you want to abort the test?</string>
    <string name="Are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="All_data_will_be_lost">All data will be lost!</string>
    <string name="All_student_data_will_be_lost">All students and their results will be removed!</string>
    <string name="Step">Step</string>
    <string name="Results">Results:</string>
    <string name="a_plus_b_additional">Addition in the direct (Dir.) codes. Perform the operation: A + B. Present the result in binary and decimal (Dec.) codes.</string>
    <string name="a_minus_b_inversion">Addition in inverse (Inv.) codes. Perform the operation: A - B. Addition must be performed without shortening, i.e. with all intermediate transformations</string>
    <string name="b_minus_a_inversion">Addition in inverse (Inv.) codes. Perform the operation: B - A. Addition must be performed without shortening, i.e. with all intermediate transformations</string>
    <string name="a_minus_b_additional">Addition in additional codes (Adt). Perform the operation: A - B. Addition must be performed without without shortening, i.e. with all intermediate transformations</string>
    <string name="b_minus_a_additional">Addition in additional codes. Perform the operation: B - A. Addition must be performed without without shortening, i.e. with all intermediate transformations</string>
    <string name="a_plus_b_result_additional">A + B (dir)</string>
    <string name="a_minus_b_result_inversion">A - B (inv)</string>
    <string name="b_minus_a_result_inversion">B - A (inv)</string>
    <string name="a_minus_b_result_additional">A - B (adt)</string>
    <string name="b_minus_a_result_additional">B - A (adt)</string>
    <string name="transformation_a">Transform A</string>
    <string name="transformation_b">Transform B</string>
    <string name="letter_b">B</string>
    <string name="letter_a">A</string>
    <string name="task_text_course1_stage1">Present the number (positive and negative) in the direct, inverse and additional codes:</string>
    <string name="_0_0">0.0</string>
    <string name="Theme">Theme</string>
    <string name="Finished">Finished</string>
    <string name="effectiveness">Effectiveness:</string>
    <string name="Check_it">Check it</string>
    <string name="Give_me_mark">Give me a mark!</string>
    <string name="OVT">BCS</string>
    <string name="OVT_long">Basics of computer technology</string>
    <string name="my_profile">Profile</string>
    <string name="stuff">People</string>
    <string name="Exit">Exit</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <string name="theme1">Theme #1: Adders</string>
    <string name="read">Read</string>
    <string name="control">Test</string>
    <string name="preparation">Training</string>
    <string name="ovtTheme1Name">Presentation Formats</string>
    <string name="ovtTheme2Name">Binary-decimal codes (2/10)</string>
    <string name="ovtTheme3Name">Binary multiplication of numbers in direct codes</string>
    <string name="ovtTheme4Name">Division of numbers on binary adders</string>
    <string name="ovtTheme1Description">Details: Numbers presentation formats. Addition the numbers in the fixed point format. Algorithm of addition the numbers in direct codes. Algorithm of addition the numbers in inverse codes. Algorithm of addition the numbers in additional codes.</string>
    <string name="ovtTheme2Description">Details: Addition the numbers in 2/10-direct codes. Translation binary numbers to binary-decimal (binary to decimal, BIDEC).</string>
    <string name="ovtTheme3Description">Details: Binary multiplication in direct codes in a column. Machine multiplication in direct codes. Algorithm and block diagram of the multiplier: low-order bits forward with a shift of the multiplied Mp (m), high-order bits forward with a shift of the sum Cp (Σ), high-order bits forward with a shift of the multiplied Cp (m), lower-order bits forward with a shift of the sum Mp (Σ))</string>
    <string name="ovtTheme4Description">Details: Division of numbers on binary adder. The algorithm of division with restoring of the remainder. Division algorithm without restoring the remainder</string>
    <string name="please_wait">Please wait…</string>
    <string name="correct">Correct!</string>
    <string name="you_took">You managed for</string>
    <string name="attempts1"> attempt</string>
    <string name="attempt234"> attempts</string>
    <string name="attempts5n"> attempts</string>
    <string name="task_is_not_completed">Task is not completed</string>
    <string name="extra_rows_found">Found the extra rows</string>
    <string name="result_ok">OK</string>
    <string name="mark">mark</string>
    <string name="result_bad">bad</string>
    <string name="Conversation_number">Conversation</string>
    <string name="Adders">Summation</string>
    <string name="Student_answers">Student\'s answers:</string>
    <string name="Correct_answers">Correct answers:</string>
    <string name="Student">Student</string>
    <string name="Professor">Professor</string>
    <string name="give_new_variant">Give a new variant!</string>
    <string name="available_courses">Available courses:</string>
    <string name="are_sure_remove_it_user">Are you sure that you want to remove this user?</string>
    <string name="are_sure_clear_firebase">Are you sure that you want clear data in the database?</string>
    <string name="are_sure_remove_you">Are you sure, that you want to remove yourself?</string>
    <string name="are_you_sure_reset_result">Are you sure you want to reset the result and assign a new option?</string>
    <string name="Registration">Registration</string>
    <string name="change_password">Restore password</string>
    <string name="enter">Enter</string>
    <string name="authorization_error">Authorization error</string>
    <string name="enter_email">Input the email</string>
    <string name="error_name">Error in the name</string>
    <string name="error_password">Error in the password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="secret_word">Secret word</string>
    <string name="group_name">Group name</string>
    <string name="_0">0</string>
    <string name="professor_group">Professors group</string>
    <string name="existing_groups">Existed groups:</string>
    <string name="enter_login_and_password">Enter login and password</string>
    <string name="help">Help</string>
    <string name="more_information">More…</string>
    <string name="Group">Group:</string>
    <string name="zero_group">-</string>
    <string name="zero_percent">0%</string>
    <string name="Theme_name">Theme\'s name</string>
    <string name="input_group_or_name">Input name or group</string>
    <string name="searching_by_people">Searching by people</string>
    <string name="plus">+</string>
    <string name="User">User</string>
    <string name="example_user_email">User@mail.com</string>
    <string name="count_attempts">Count of an\n attempts</string>
    <string name="contacts">Contacts:</string>
    <string name="Secret">Secret</string>
    <string name="clear_firebase">Clear data in firebase:</string>
    <string name="Error_uploading_img">Uploading file error</string>
    <string name="Oops_error">Oops..error</string>
    <string name="Lets_try_again">Let\'s try again..</string>
    <string name="you_are_removed_from_firebase">You are removed from system</string>
    <string name="registration_error">Registration error</string>
    <string name="incorrect_secret_word">Incorrect secret word</string>
    <string name="input_your_first_name">Input the first name</string>
    <string name="input_your_last_name">Input the second name</string>
    <string name="input_your_email">Email</string>
    <string name="input_your_password">Password</string>
    <string name="here_can_be_your_blurb">Here can be your advertisement</string>
    <string name="User_status">Role:</string>
    <string name="Student_does_not_send_control_work">The student did not send the test work for verification</string>
    <string name="This_part_in_develop">This section is under construction</string>
    <string name="incorrect_format_in">Invalid format in the %1$d row</string>
    <string name="Error_in_">Error in the %1$d row</string>
    <string name="I_want_a_fresh_photo">I want a fresh photo!</string>
    <string name="I_will_find_something_old">I\'ll find something old…</string>
    <string name="camera_permission_denied">Missing access to camera</string>
    <string name="Name_can_not_be_empty">Name can not be empty</string>
    <string name="Could_not_copy_system_variables">Could not copy system variables</string>
    <string name="Enter_key">Input the key</string>
    <string name="searching">Searching…</string>
    <string name="Sorry_you_cant_remove_user">Sorry, it\'s develop version, you can\'t remove user</string>
    <string name="Sorry_you_cant_clear_firebase">Sorry, it\'s develop version, you can\'t clear firebase</string>
    <string name="Sorry_you_cant_reset_variant">Sorry, it\'s develop version, you can\'t reset variant</string>
    <string name="profile_successfully_updated">Profile successfully updated</string>
</resources>
